# gettake

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE.txt  README.md  cspell.json  gettake.html  index.html  mise.toml  pyproject.toml  search.js  sitemap.xml
.devcontainer/: devcontainer-lock.json  devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: docs.yml  release.yml  test.yml
gettake/: __init__.py  gettake.html  gettake.py  main.html  main.py  models.html  models.py
reference/gettake/: index.html
reference/gettake/gettake/: index.html
reference/gettake/main/: index.html
reference/gettake/models/: index.html
search/: search_index.json
tests/: test_gettake.py
