[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "gettake"
description = "Get and save images from webcomicgamma"
readme = "README.md"
keywords = [
  "cli",
  "downloader",
  "manga",
]
license = { text = "MIT" }
authors = [ { name = "eggplants", email = "w10776e8w@yahoo.co.jp" } ]
requires-python = ">=3.10,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  "pillow>=11.1,<13",
  "requests>=2.32.3,<3",
]
urls.Documentation = "https://egpl.dev/gettake/"
urls.Repository = "https://github.com/eggplants/gettake"
scripts.gettake = "gettake.main:main"

[dependency-groups]
dev = [
  "pymarkdownlnt>=0.9.33",
  "pyproject-fmt>=2.11.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7",
]
docs = [
  "pdoc>=16",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = [ "gettake" ]

[tool.hatch.build.targets.wheel]
include = [ "gettake" ]

[tool.uv]
preview = true
default-groups = [
  "dev",
  "docs",
]
exclude-newer = "P7D"

[tool.ruff]
format.indent-style = "space"
format.quote-style = "double"
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812",
]
lint.per-file-ignores."main.py" = [
  "T201", # `print` found
]
lint.per-file-ignores."tests/*.py" = [
  "D",
  "S101", # Use of assert detected
]
lint.pydocstyle.convention = "google"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"
